syntax = "proto3";

package yandex.cloud.priv.mdb.mongodb.v1;

import "yandex/cloud/priv/validation.proto";
import "yandex/cloud/priv/sensitive.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/mdb/mongodb/v1;mongodb";
option java_outer_classname = "PMU";

// MongoDB user.
message User {
  // Required. Name of the MongoDB user.
  string name = 1;

  // Required. ID of the MongoDB cluster.
  string cluster_id = 2;

  // List of permissions granted to the user.
  repeated Permission permissions = 3;
}

message Permission {
  // Name of the database that the permission grants access to.
  string database_name = 1;

  repeated string roles = 2;
}

message UserSpec {
  // Required. Name of the MongoDB user.
  string name = 1 [(required) = true, (length) = "<=63", (pattern) = "[a-zA-Z0-9_]*"];

  // Required.
  string password = 2 [(length) = "8-128", (sensitive) = true];

  repeated Permission permissions = 3;
}
