syntax = "proto3";

package yandex.cloud.priv.serverless.containers.v1.inner;

import "google/protobuf/duration.proto";
import "yandex/cloud/priv/serverless/containers/v1/container.proto";
//import "yandex/cloud/api/operation.proto";
//import "yandex/cloud/priv/operation/operation.proto";
//import "yandex/cloud/priv/quota/quota.proto";
import "yandex/cloud/priv/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/serverless/containers/v1/inner;inner";
option java_outer_classname = "PSCCS";

service ContainerService {
  rpc GetRevision (GetRevisionRequest) returns (GetRevisionResponse);
}

message GetRevisionRequest {
  string container_id = 1;
  oneof select {
    option (exactly_one) = true;
    bool latest = 2;
  }
}

message GetRevisionResponse {
  string container_revision_id = 1;
  string container_id = 2;
  Image image = 5;
  Resources resources = 6;
  google.protobuf.Duration execution_timeout = 7;
  int64 concurrency = 8;
  string service_account_id = 9;

  string folder_id = 10;
  string cloud_id = 11;

  string function_id = 12;
  string function_version_id = 13;

  repeated Secret secrets = 14;
}
